@@ -1,5 +1,7 @@
 1.1.3 to 1.1.4
 ----------------------------------------------------------------------
+- When the asset information for a node is modified, OpenNMS
+  will now update RTC to include any changes.
 - When a new node is discovered, created a null record in
   the assets table. This is useful for those using
   the categories section in assets for notifications.
